--- a/templates/admin.html
+++ b/templates/admin.html
@@ -418,7 +418,7 @@
                 </div>
 
                 {% with user_type='admin' %}
-                    <div id="change-password" class="section" style="display: none;">
+                    <div id="changePassword" class="section" style="display: none;"> <!-- Changed id from "change-password" to "changePassword" -->
                         {% include 'change_password.inc' %}
                     </div>
                 {% endwith %}
